# humanize-rl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  justfile  pyproject.toml
.agents/: napkin.md
.github/workflows/: test.yml
configs/: 01-aiify.yaml  02-humanize.yaml
configs/v03/: 01-aiify-walking-skeleton.yaml  02-humanize-walking-skeleton.yaml
data/benchmark/: ai_samples.jsonl  human_samples.jsonl  scored_3class_v01.jsonl  scored_combined_v01.jsonl  scored_output.jsonl  scored_pairs_v01.jsonl  test_set_v01.jsonl  test_set_v02.jsonl
docs/plans/: v03-seed-benchmark-spec.md
docs/solutions/: v03-walking-skeleton-final.md  v03-walking-skeleton.md
log/: 2026-04-16-slice1-benchmark.md  2026-04-16-slice2-3class.md  2026-04-16-slice3-combined-scoring.md
prompts/: aiify.txt  aiify_v02.txt  humanize.txt  humanize_v02.txt
rubrics/: humanness_v01.yaml
runs/v03/: v03_report.json  v03_report.md
scripts/: build_walking_skeleton_seeds.py  duplicate_seeds.py
seeds/: human_seeds_v01.jsonl
seeds/v03/: walking_skeleton.jsonl
src/humanize_rl/: __init__.py  pipeline.py  pipeline_cli.py  score_all.py
src/humanize_rl/benchmark/: __init__.py  cli.py  datasets.py  evaluator.py
src/humanize_rl/data/: seed.py  (+6 more)
tests/: test_pipeline.py  test_pipeline_unit.py  test_rubric_loads.py
tests/benchmark/: test_datasets.py  test_evaluator.py
tests/data/: test_pair_gate_v03.py  test_preservation.py  test_report_v03.py  test_seed_schema.py  test_selector.py
tests/scoring/: test_gate.py  test_layer1.py  test_layer1_v03_regression.py  test_layer2.py
(+6 files in other folders)
