[project]
name = "humanize-rl"
version = "0.1.0"
description = "Two-layer AI writing detection, scoring, and training pipeline"
readme = "README.md"
authors = [
    { name = "Jay Shah", email = "jayshah5696@gmail.com" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "arka",
]

[project.scripts]
humanize-rl = "humanize_rl:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/humanize_rl",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
arka = { path = "../arka", editable = true }

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
